Defined styles for body and card

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,12 +3,19 @@
   --color-soft-blue: hsl(215, 51%, 70%);
   --color-Cyan: hsl(178, 100%, 50%);
   --color-Very-dark-blue-main-BG: hsl(217, 54%, 11%);
-  --Very-dark-blue-card-BG: hsl(216, 50%, 16%);
-  --Very-dark-blue-line: hsl(215, 32%, 27%);
+  --color-Very-dark-blue-card-BG: hsl(216, 50%, 16%);
+  --color-Very-dark-blue-line: hsl(215, 32%, 27%);
   --color-White: hsl(0, 0%, 100%);
   --main-font: 'Outfit', sans-serif;
 }
 
+body {
+	background: var(--color-Very-dark-blue-main-BG);
+}
+
+.card {
+	background: var(--color-Very-dark-blue-card-BG);
+}
 
 .attribution {
   font-size: 11px;
