--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,14 +9,66 @@
   --main-font: 'Outfit', sans-serif;
 }
 
+* {
+	font-family: var(--main-font);
+}
+
+html {
+	font-size: 62.5%;
+}
+
 body {
 	background: var(--color-Very-dark-blue-main-BG);
 }
 
+/*card*/
 .card {
 	background: var(--color-Very-dark-blue-card-BG);
+	padding: 1rem;
 }
 
+/*Typography*/
+.eth-image {
+	color: white;
+}
+
+.eth-name {
+	font-size: 2.5rem;
+	color: var(--color-White);
+	margin-bottom: 0;
+}
+
+.eth-desc {
+	font-size: 1.9rem;
+	font-weight: 300;
+	color: var(--color-soft-blue);
+	margin-top: 1rem;
+	line-height: 2;
+}
+
+.eth-price {
+	font-size: 1.8rem;
+	color: var(--color-Cyan);
+	font-weight: 600;
+}
+
+.eth-timeleft {
+	font-size: 1.8rem;
+	color: var(--color-soft-blue);
+	font-weight: 400;
+}
+
+.eth-creatorinfo {	
+	font-size: 1.8rem;
+	color: var(--color-soft-blue);
+}
+
+.eth-creatorinfo a {
+	color: var(--color-White);
+	text-decoration: none;
+}
+
+/*attribution*/
 .attribution {
   font-size: 11px;
   text-align: center;
