--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,7 @@ body {
   background: var(--color-Very-dark-blue-card-BG);
   padding: 2rem;
   border-radius: 20px;
+  margin: 2rem .5rem;
 }
 
 /*Typography*/
@@ -43,8 +44,8 @@ body {
   font-size: 1.9rem;
   font-weight: 300;
   color: var(--color-soft-blue);
-  margin-top: 1rem;
-  line-height: 2;
+  margin: 0;
+  line-height: 1.8;
 }
 
 .eth-price {
@@ -76,6 +77,7 @@ body {
 
 .eth-pricetimebox>span>p {
   padding-left: .7rem;
+  margin: 1rem;
 }
 
 
