--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,10 +34,16 @@ body {
   color: white;
 }
 
-.eth-name {
+.eth-name > a {
   font-size: 2.5rem;
   color: var(--color-White);
   margin-bottom: 0;
+  text-decoration: none;
+}
+
+.eth-name a:hover {
+	color: var(--color-Cyan);
+	cursor: pointer;
 }
 
 .eth-desc {
@@ -93,19 +99,45 @@ body {
   width: 100%;
   max-width: 339px;
   border-radius: 20px;
+  overflow: hidden;
+}
+
+.eth-imagecontainer:hover {
+	color: var(--color-Cyan);
+	cursor: pointer;
 }
 
 .eth-image {
   width: 100%;
   display: block;
   border-radius: 20px;
+  height: auto;
 }
 
 .overlap {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity .3s ease;
+}
+
+.eth-imagecontainer::before {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: var(--color-Cyan);
+	opacity: 0;
+	transition: opacity .3s ease;
+}
+
+.eth-imagecontainer:hover:before {
+	opacity: .5;
 }
 
 .eth-timeleft>img {
@@ -135,6 +167,23 @@ body {
 
 .eth-creatorinfo {
 	font-weight: 300;
+}
+
+.eth-creatorinfo a:hover {
+	color: var(--color-Cyan);
+	cursor: pointer;
+}
+
+/*transitions*/
+ 
+.eth-imagecontainer:hover,
+.eth-imagecontainer:hover .overlap {
+	opacity: 1;
+}
+
+.eth-creatorinfo > a,
+.eth-name > a {
+	transition: 0.3s ease;
 }
 
 /*attribution*/
