--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,14 +19,22 @@ html {
 
 body {
   background: var(--color-Very-dark-blue-main-BG);
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+	height: 100vh;
+	margin: 0;
 }
 
 /*card*/
 .card {
   background: var(--color-Very-dark-blue-card-BG);
-  padding: 2rem;
+  padding: 2rem 2rem 1rem 2rem;
   border-radius: 20px;
-  margin: 2rem .5rem;
+  margin: 2rem 1rem 1rem;
+  max-width: 370px;
+  box-shadow: 0 10px 40px 1px;
 }
 
 /*Typography*/
@@ -34,7 +42,7 @@ body {
   color: white;
 }
 
-.eth-name > a {
+.eth-name>a {
   font-size: 2.5rem;
   color: var(--color-White);
   margin-bottom: 0;
@@ -42,8 +50,8 @@ body {
 }
 
 .eth-name a:hover {
-	color: var(--color-Cyan);
-	cursor: pointer;
+  color: var(--color-Cyan);
+  cursor: pointer;
 }
 
 .eth-desc {
@@ -82,7 +90,6 @@ body {
 }
 
 .eth-pricetimebox>span>p {
-  padding-left: .7rem;
   margin: 1rem;
 }
 
@@ -97,14 +104,14 @@ body {
 .eth-imagecontainer {
   position: relative;
   width: 100%;
-  max-width: 339px;
+/*  max-width: 339px;*/
   border-radius: 20px;
   overflow: hidden;
 }
 
 .eth-imagecontainer:hover {
-	color: var(--color-Cyan);
-	cursor: pointer;
+  color: var(--color-Cyan);
+  cursor: pointer;
 }
 
 .eth-image {
@@ -124,20 +131,20 @@ body {
 }
 
 .eth-imagecontainer::before {
-	content: "";
-	display: block;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: var(--color-Cyan);
-	opacity: 0;
-	transition: opacity .3s ease;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--color-Cyan);
+  opacity: 0;
+  transition: opacity .3s ease;
 }
 
 .eth-imagecontainer:hover:before {
-	opacity: .5;
+  opacity: .5;
 }
 
 .eth-timeleft>img {
@@ -152,46 +159,55 @@ body {
 
 /*creator section*/
 .eth-creator {
-	display: flex;
-	align-items: center;
-	border-top: 1px solid var(--color-Very-dark-blue-line);
+  display: flex;
+  align-items: center;
+  border-top: 1px solid var(--color-Very-dark-blue-line);
 }
 
 .eth-creatorimage {
-	width: 35px;
-	height: 35px;
-	border: 2px solid white;
-	border-radius: 50%;
-	margin-right: 10px;
+  width: 35px;
+  height: 35px;
+  border: 2px solid white;
+  border-radius: 50%;
+  margin-right: 18px;
 }
 
 .eth-creatorinfo {
-	font-weight: 300;
+  font-weight: 300;
 }
 
 .eth-creatorinfo a:hover {
-	color: var(--color-Cyan);
-	cursor: pointer;
+  color: var(--color-Cyan);
+  cursor: pointer;
 }
 
 /*transitions*/
- 
 .eth-imagecontainer:hover,
 .eth-imagecontainer:hover .overlap {
-	opacity: 1;
+  opacity: 1;
 }
 
-.eth-creatorinfo > a,
-.eth-name > a {
-	transition: 0.3s ease;
+.eth-creatorinfo>a,
+.eth-name>a {
+  transition: 0.3s ease;
 }
 
 /*attribution*/
 .attribution {
-  font-size: 11px;
+	color: var(--color-soft-blue);
+  font-size: 1.2rem;
   text-align: center;
 }
 
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--color-White);
+  text-decoration: none;
+}
+
+.attribution>a:hover {
+	color: var(--color-Cyan);
+}
+
+.attribution>a {
+	transition: color .3s ease-out;
 }
